--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,7 +1,12 @@
 .columns > div {
     display: flex;
     flex-direction: column;
+    gap: 32px;
     margin: 48px 0;
+}
+
+.columns.revese-odd-rows-on-mobile > div:nth-of-type(odd) {
+    flex-direction: column-reverse;
 }
 
 .columns img {
@@ -15,16 +20,11 @@
 @media (min-width: 900px) {
     .columns > div {
         display: flex;
-        flex-direction: unset;
+        flex-direction: unset !important;
     }
 
     .columns > div > div {
         flex: 1;
-        margin-left: 32px;
-    }
-
-    .columns > div > div:first-of-type {
-        margin-left: unset;
     }
 
     .columns ul.cta-list {
