--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,7 @@
   --btn-padding: 12px 32px;
 
   /* body sizes */
+  --body-font-size-l: 2.4rem;
   --body-font-size-m: 2.2rem;
   --body-font-size-s: 1.8rem;
   --body-font-size-xs: 1.6rem;
