--- a/blocks/search-results/search-results.css
+++ b/blocks/search-results/search-results.css
@@ -34,6 +34,10 @@
   display: block !important;
 }
 
+.search-results.block  {
+  flex: 1;
+}
+
 @media (max-width: 992px) {
   .studio-search-widget {
     padding: 10px 0 0;
