--- a/blocks/eloqua-form/eloqua-form.css
+++ b/blocks/eloqua-form/eloqua-form.css
@@ -19,7 +19,7 @@
   padding: 10px 40px 10px 15px;
   border: none;
   border-radius: 0;
-  background-color: #ebebea;
+  background-color: var(--background-light-gray);
   appearance: none;
   max-width: none;
 }
@@ -32,8 +32,8 @@
   text-align: center;
   vertical-align: middle;
   white-space: nowrap;
-  background: #004fbc;
-  color: #fff;
+  background: var(--link-color);
+  color: var(--c-white);
   border: none;
   margin-bottom: 30px;
   width: auto;
@@ -61,6 +61,23 @@
   line-height: 24px;
   margin-top: -12px;
   content: "\f107";
-  color: #004fbc;
+  color: var(--link-color);
   pointer-events: none;
+}
+
+.eloqua-form .field-control-wrapper,
+.eloqua-form span.LV_validation_message {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+  display: block;
+}
+
+.eloqua-form .single-checkbox-row.row {
+  justify-content: center;
+}
+
+#formElement2 > div > div > div > div {
+  display: grid;
+  justify-content: center;
 }
