--- a/templates/magazine/magazine.css
+++ b/templates/magazine/magazine.css
@@ -4,7 +4,7 @@ body.magazine>main {
   margin: 0 auto;
 }
 
-body.magazine>main div.default-content-wrapper > blockquote > p > picture {
+body.magazine>main div.default-content-wrapper>blockquote>p>picture {
   float: left;
   padding-right: 20px;
 }
@@ -143,7 +143,7 @@ body.magazine>main .section.template.article-sidebar>div.subscribe>a>i {
 }
 
 
-body.magazine>main div.default-content-wrapper > blockquote > p {
+body.magazine>main div.default-content-wrapper>blockquote>p {
   quotes: none;
   text-align: center;
   display: table;
@@ -193,18 +193,25 @@ div.section.related-articles-container>div.related-articles-wrapper {
 
 div.section.eloqua-form-container {
   background-color: #D8D8D8;
-  margin: 35px 0;
-  padding: 35px;
   position: relative;
-  float: right;
+  clear: right;
+  width: 756px;
+  padding: 35px 15px;
+  margin: 48px auto;
 }
 
-div.section.eloqua-form-container > div.default-content-wrapper {
+div.section.eloqua-form-container>div.default-content-wrapper {
   text-align: center;
 }
 
-div.section.eloqua-form-container > div.eloqua-form-wrapper {
+div.section.eloqua-form-container>div.eloqua-form-wrapper {
   margin: 10px auto;
+  width: 100%;
+  max-width: 960px;
+}
+
+#fe774 {
+  background-color: var(--c-white);
 }
 
 @media screen and (min-width: 992px) {
@@ -264,12 +271,24 @@ div.section.eloqua-form-container > div.eloqua-form-wrapper {
   body.magazine>main .section .default-content-wrapper,
   body.magazine>main .section .teaser-cards-wrapper,
   body.magazine>main .section .teaser-grid-wrapper,
-  body.magazine>main .section .columns-wrapper,
-  body.magazine>main .section .related-articles-wrapper {
+  body.magazine>main .section .columns-wrapper {
     float: right;
     margin: 0 1%;
     width: 75%;
     height: 100%;
+  }
+
+  body.magazine>main .section .related-articles-wrapper {
+    clear: right;
+    width: 100%;
+  }
+
+  div.section.eloqua-form-container {
+    width: 100%;
+  }
+
+  body>main>div.section.eloqua-form-container>div.default-content-wrapper {
+    width: 100%;
   }
 
   body.magazine>main .section.default-content-wrapper>div {
@@ -288,5 +307,15 @@ div.section.eloqua-form-container > div.eloqua-form-wrapper {
 
   body.magazine>main .section.template.article-sidebar>div.subscribe>.cta {
     padding: 15px 32px;
+  }
+
+  body.magazine .eloqua-form .field-control-wrapper,
+  body.magazine .eloqua-form span.LV_validation_message {
+    width: 50%;
+    margin: unset;
+  }
+
+  body.magazine .eloqua-form #formElement2 > div > div > div > div {
+    display: block;
   }
 }
