--- a/blocks/eloqua-form/eloqua-form.css
+++ b/blocks/eloqua-form/eloqua-form.css
@@ -45,6 +45,7 @@
 
 .eloqua-form .single-checkbox-row.row {
   display: flex;
+  justify-content: center;
 }
 
 .eloqua-form .eloqua-select-wrapper {
@@ -66,15 +67,11 @@
 }
 
 .eloqua-form .field-control-wrapper,
-.eloqua-form span.LV_validation_message {
+.eloqua-form span.lv_validation_message {
   width: 50%;
   margin: auto;
   text-align: center;
   display: block;
-}
-
-.eloqua-form .single-checkbox-row.row {
-  justify-content: center;
 }
 
 #formElement2 > div > div > div > div {
