--- a/blocks/eloqua-form/eloqua-form.css
+++ b/blocks/eloqua-form/eloqua-form.css
@@ -45,6 +45,7 @@
 
 .eloqua-form .single-checkbox-row.row {
   display: flex;
+  justify-content: center;
 }
 
 .eloqua-form .eloqua-select-wrapper {
@@ -65,6 +66,7 @@
   pointer-events: none;
 }
 
+/* stylelint-disable selector-class-pattern */
 .eloqua-form .field-control-wrapper,
 .eloqua-form span.LV_validation_message {
   width: 100%;
@@ -73,7 +75,4 @@
   display: block;
 }
 
-.eloqua-form .single-checkbox-row.row {
-  justify-content: center;
-}
 
