--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -54,14 +54,14 @@ header nav .brand .vgsection-location .vgsection {
 header nav .vgsection-location .location {
   font-family: var(--body-font-family);
   font-weight: 400;
-  color: #A7A8A9;
+  color: #a7a8a9;
 }
 
 /* the search icon */
 header nav .search-toggle .search-icon {
   width: 16px;
   height: 16px;
-  color: #A7A8A9;
+  color: #a7a8a9;
 }
 
 /* the hamburger icon */
@@ -69,7 +69,7 @@ header nav .hamburger-toggle .hamburger-icon {
   width: 20px;
   height: 14px;
   margin-left: 12px;
-  color: #A7A8A9;
+  color: #a7a8a9;
   margin-bottom: 2px;
 }
 
@@ -91,7 +91,7 @@ header nav .search div {
   font-family: var(--body-font-family);
 }
 
-header nav .search-toggle[aria-expanded=true]~.search {
+header nav .search-toggle[aria-expanded='true'] ~ .search {
   height: 59px;
   margin-block-end: 15px;
 }
@@ -112,7 +112,7 @@ header nav .search input {
 header nav .search .search-button {
   height: 59px;
   padding: 0 10px;
-  color: #A7A8A9;
+  color: #a7a8a9;
   border: none;
   border-radius: 0;
   background-color: #ebebea;
@@ -126,8 +126,57 @@ header nav .search label {
   display: none;
 }
 
+header nav #div-widget-id {
+  position: static;
+}
+
+header nav #div-widget-id-search-input {
+  width: 100%;
+}
+
 header nav #div-widget-id-autosuggest-results {
-  display: none !important;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  z-index: 1053;
+  background: white;
+  left: 0;
+  top: 100%;
+  margin: 0 21px;
+  width: calc(100% - 42px);
+}
+
+header nav #div-widget-id-autosuggest-results .result-row {
+  width: 100%;
+  padding: 10px 10px 10px 30px;
+  justify-content: left;
+  font-size: 16px;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+@media (min-width: 768px) {
+  header nav #div-widget-id-autosuggest-results {
+    margin: 0 calc((100% - 714px) / 2);
+    max-width: 714px;
+  }
+}
+
+@media (min-width: 992px) {
+  header nav #div-widget-id-search-input {
+    width: 290px;
+  }
+
+  header nav #div-widget-id-autosuggest-results {
+    left: unset;
+    width: 290px;
+    top: 101px;
+    margin: 0;
+  }
+}
+
+header nav #div-widget-id-autosuggest-results .searchstudio-active-row {
+  background: #f2f2f2;
 }
 
 /* hamburger menu: tools */
@@ -142,11 +191,11 @@ header nav .tools {
   top: 0;
   z-index: 1052;
   background-color: white;
-  transition: right .2s cubic-bezier(.4,0,.2,1) .1s;
-  border-bottom: 1px solid #E1DFDD;
+  transition: right 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
+  border-bottom: 1px solid #e1dfdd;
 }
 
-header nav .hamburger-toggle[aria-expanded=true]~.tools {
+header nav .hamburger-toggle[aria-expanded='true'] ~ .tools {
   right: 0;
 }
 
@@ -173,7 +222,7 @@ header nav .tools ul li:first-child {
 }
 
 header nav .tools ul li a {
-  color: #53565A;
+  color: #53565a;
   text-decoration: none;
   font-size: 8pt;
 }
@@ -205,11 +254,11 @@ header nav .sections {
   top: 73px;
   z-index: 1052;
   background-color: white;
-  transition: right .2s cubic-bezier(.4,0,.2,1) .1s;
+  transition: right 0.2s cubic-bezier(0.4, 0, 0.2, 1) 0.1s;
   overflow: hidden scroll;
 }
 
-header nav .hamburger-toggle[aria-expanded=true]~.sections {
+header nav .hamburger-toggle[aria-expanded='true'] ~ .sections {
   right: 0;
 }
 
@@ -238,7 +287,7 @@ header nav .sections .sections-list ul {
 
 header nav .sections .section {
   line-height: 1.5;
-  color: #53565A;
+  color: #53565a;
 }
 
 header nav .sections .section.expand {
@@ -256,7 +305,7 @@ header nav .sections .section a {
 
 header nav .sections .section > a {
   padding: 15px;
-  border-bottom: 1px solid #E1DFDD;
+  border-bottom: 1px solid #e1dfdd;
   text-transform: uppercase;
 }
 
@@ -264,14 +313,14 @@ header nav .sections .section a::after {
   position: absolute;
   right: 15px;
   font-family: var(--ff-fontawesome);
-  content: "\f105";
+  content: '\f105';
   font-size: 20px;
   width: 8px;
   height: 8px;
   margin-top: -4px;
 }
 
-header nav .sections .section li > *:not(a.primary-link,ul) {
+header nav .sections .section li > *:not(a.primary-link, ul) {
   /* hide all elements in list items but the primary link and any sub list */
   display: none;
 }
@@ -296,7 +345,7 @@ header nav .sections .section > ul > li a::after {
 header nav .sections .section.expand > a::after {
   content: '\f104';
   right: unset;
-  left: 0
+  left: 0;
 }
 
 header nav .sections .section > ul > li.overview a::after {
@@ -333,12 +382,12 @@ header nav .sections .section .navigation-cta {
 @media (min-width: 768px) {
   /* the main mobile div */
   header nav {
-    width: 756px;
+    min-width: 756px;
     flex: 0;
   }
 
   /* the search input  */
-  header nav .search>div {
+  header nav .search > div {
     width: 756px;
     margin: 0 0 0 auto;
   }
@@ -349,7 +398,7 @@ header nav .sections .section .navigation-cta {
     right: -50vw;
   }
 
-  header nav .hamburger-toggle[aria-expanded=true]~.tools {
+  header nav .hamburger-toggle[aria-expanded='true'] ~ .tools {
     width: 50vw;
     right: 0;
   }
@@ -360,7 +409,7 @@ header nav .sections .section .navigation-cta {
     right: -50vw;
   }
 
-  header nav .hamburger-toggle[aria-expanded=true]~.sections {
+  header nav .hamburger-toggle[aria-expanded='true'] ~ .sections {
     width: 50vw;
     right: 0;
   }
@@ -439,7 +488,7 @@ header nav .sections .section .navigation-cta {
   }
 
   header nav .tools ul li a {
-    color: #888B8D;
+    color: #888b8d;
     font-size: 1.2rem;
   }
 
@@ -474,8 +523,8 @@ header nav .sections .section .navigation-cta {
     padding: 10px 35px 10px 15px;
     width: 290px;
     height: 40px;
-    color: #53565A;
-    border: 1pt solid #E1DFDD;
+    color: #53565a;
+    border: 1pt solid #e1dfdd;
     border-radius: 0;
     background-color: #fff;
     box-shadow: none;
@@ -505,7 +554,7 @@ header nav .sections .section .navigation-cta {
     grid-area: sections;
     height: 48px;
     width: 100%;
-    background-color: #E1DFDD;
+    background-color: #e1dfdd;
   }
 
   header nav .sections .sections-list {
@@ -545,13 +594,13 @@ header nav .sections .section .navigation-cta {
     position: initial;
     display: inline-block;
     width: 1px;
-    content: "\f105";
+    content: '\f105';
     font-size: 12px;
     margin-left: 6px;
   }
 
   header nav .sections .section.expand a::after {
-    content: "\f107";
+    content: '\f107';
   }
 
   header nav .sections .section .overview {
@@ -600,7 +649,7 @@ header nav .sections .section .navigation-cta {
     margin-bottom: 20px;
   }
 
-  header nav .sections .section.expand li > *:not(a.primary-link,ul) {
+  header nav .sections .section.expand li > *:not(a.primary-link, ul) {
     /* show all elements in all list items */
     display: block;
   }
@@ -750,6 +799,7 @@ header nav .sections .section .navigation-cta {
 .header .search-container,
 .studio-search-widget .search-wrapper {
   padding: 0;
+  width: 100%;
 }
 
 .studio-search-widget .studio-widget-search-icon,
