fix css linting

--- a/blocks/eloqua-form/eloqua-form.css
+++ b/blocks/eloqua-form/eloqua-form.css
@@ -53,6 +53,7 @@ aside>div>div>div>p.button-container>a.button.primary::after {
   justify-content: center;
 }
 
+/* stylelint-disable selector-class-pattern */
 #formElement10 .single-checkbox-row.row {
   justify-content: unset;
 }
