--- a/blocks/text/text.css
+++ b/blocks/text/text.css
@@ -16,23 +16,23 @@
     font-weight: bold;
 }
 
-div.text.l {
+div.text.l :is(p, h1, h2, h3, h4, h5, h6) {
     font-size:   var(--body-font-size-l);
 }
 
-div.text.m {
+div.text.m :is(p, h1, h2, h3, h4, h5, h6) {
     font-size:   var(--body-font-size-m);
 }
 
-div.text.s {
+div.text.s :is(p, h1, h2, h3, h4, h5, h6) {
     font-size:   var(--body-font-size-s);
 }
 
-div.text.xs {
+div.text.xs :is(p, h1, h2, h3, h4, h5, h6) {
     font-size:   var(--body-font-size-xs);
 }
 
-div.text.xxs {
+div.text.xxs :is(p, h1, h2, h3, h4, h5, h6) {
     font-size:   var(--body-font-size-xxs);
 }
 
